Fix the checkbox alignements

--- a/assets/css/asgard.css
+++ b/assets/css/asgard.css
@@ -28,3 +28,6 @@ footer.main-footer p.text-muted {
 .skin-blue .main-header .logo {
   border-bottom: 1px solid #202227;
 }
+.checkbox label {
+  padding-left: 0;
+}
